# MatchForge-SDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  instructions.md  release.md  release_script.sh
benches/: matchmaking_benchmarks.rs
examples/: advanced_analytics.rs  analytics_dashboard.rs  basic.rs  custom_mmr.rs  minimal_test.rs  party_matchmaking.rs  simple_test.rs
src/: error.rs  lib.rs  prelude.rs
src/analytics/: dashboard.rs  insights.rs  metrics.rs  mod.rs  reports.rs
src/lobby/: lobby.rs  mod.rs  state.rs  team.rs
src/mmr/: algorithm.rs  decay.rs  mod.rs  rating.rs  season.rs
src/party/: manager.rs  mmr_strategy.rs  mod.rs  party.rs
src/persistence/: memory.rs  mod.rs  postgres.rs  redis.rs  traits.rs
src/queue/: advanced_strategies.rs  constraints.rs  entry.rs  manager.rs  matcher.rs  mod.rs
src/runner/: config.rs  mod.rs  tick.rs
src/security/: anti_abuse.rs  mod.rs  rate_limiter.rs  security.rs
src/telemetry/: events.rs  metrics.rs  mod.rs  monitoring.rs
tests/: integration_tests.rs
